--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap"
       rel="stylesheet"
     />
+    <meta name="description" content="Juan Bouza's website" />
+    <meta name="keywords" content="portfolio webdev gamedev" />
 
     <title>Juan Bouza's site</title>
   </head>
